--- a/webapp/src/login/login.css
+++ b/webapp/src/login/login.css
@@ -1,8 +1,9 @@
 .login-container {
-  max-width: 400px;
   margin: 2rem auto;
   padding: 2rem;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  height: fit-content;
+  width: fit-content;
 }
 
 .form-group {
