--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -18,27 +18,12 @@ body {
 
 .page-header {
   grid-area: header;
-}
-
-.page-sidebar {
-  grid-area: sidebar;
-}
-
-.page-body {
-  grid-area: main;
-}
-
-.page-footer {
-  grid-area: footer;
-}
-
-.page-header {
   background-color: hsl(306, 40%, 25%);
   box-shadow: 0px 2px 5px 0px hsl(307, 38%, 21%);
   z-index: 1;
-
   display: flex;
   align-items: center;
+  padding: 0 2rem; /* 新增 */
 }
 
 .page-header > .logo {
@@ -59,6 +44,7 @@ body {
 }
 
 .page-footer {
+  grid-area: footer;
   line-height: 2;
   color: #999;
   margin-top: 1em;
@@ -66,7 +52,11 @@ body {
 }
 
 .page-sidebar {
+  grid-area: sidebar;
   background-color: hsl(307, 38%, 85%);
+  display: flex;
+  justify-content: flex-end;
+  flex: 1;
 }
 
 .page-sidebar > ul {
@@ -126,10 +116,11 @@ body {
 }
 
 .page-body {
-  min-height: calc(100vh - 4rem);
+  grid-area: main;
+  min-height: calc(100vh - 4rem); /* 4rem header + 2rem footer */
   position: relative;
 
   background-color: hsl(307, 38%, 90%);
 
-  overflow-y: overlay;
+  overflow-y: auto; /* 改为标准滚动条 */
 }
